
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev22"
name = "ProMan"
dependencies = [
    "pre-commit == 3.8.0",
    "rich >= 13.5",
    "ActionMan == 0.0.0.dev21",
    "ControlMan == 0.0.0.dev288",
    "ConventionalCommits == 0.0.0.dev11",
    "GitHub-Contexts == 0.0.0.dev8",
    "LoggerMan == 0.0.0.dev33",
    "MDit == 0.0.0.dev12",
    "HTMP == 0.0.0.dev5",
    "PyLinks == 0.0.0.dev27",
    "PySyntax == 0.0.0.dev3",
    "VersionMan == 0.0.0.dev248",
    "GitTidy == 0.0.0.dev25",
    "PkgData == 0.0.0.dev4",
    "PyShellMan == 0.0.0.dev2",
    "PySerials == 0.0.0.dev15",
    "FileEx == 0.0.0.dev1",
    "ANSI-SGR == 0.0.0.dev9",
]
requires-python = ">=3.10"


#[project.scripts]
#rd-print = "repodynamics.actions._print:main"
#repodynamics-get-metadata = "pypackit.metadata:__main__"
#repodynamics-sync-files = "pypackit.templates:__main__"
#repodynamics-deploy = "pypackit.cd:__main__"