
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev73"
name = "ProMan"
dependencies = [
    "pre-commit == 3.8.0",
    "rich >= 13.5",
    "versioningit >= 3.1.2, < 4",
    "Jinja2 == 3.1.4",
    "ActionMan == 0.0.0.dev24",
    "ControlMan == 0.0.0.dev337",
    "ConventionalCommits == 0.0.0.dev26",
    "GitHub-Contexts == 0.0.0.dev8",
    "LoggerMan == 0.0.0.dev56",
    "MDit == 0.0.0.dev27",
    "HTMP == 0.0.0.dev5",
    "PyLinks == 0.0.0.dev40",
    "PySyntax == 0.0.0.dev3",
    "VersionMan == 0.0.0.dev248",
    "GitTidy == 0.0.0.dev53",
    "PkgData == 0.0.0.dev5",
    "PyShellMan == 0.0.0.dev17",
    "PySerials == 0.0.0.dev30",
    "FileEx == 0.0.0.dev1",
    "ANSI-SGR == 0.0.0.dev10",
    "PyColorIT == 0.0.0.dev8",
]
requires-python = ">=3.10"


#[project.scripts]
#rd-print = "repodynamics.actions._print:main"
#repodynamics-get-metadata = "pypackit.metadata:__main__"
#repodynamics-sync-files = "pypackit.templates:__main__"
#repodynamics-deploy = "pypackit.cd:__main__"