
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev171"
name = "ProMan"
dependencies = [
    "pre-commit == 4.0.1",
    "rich >= 13.5",
    "versioningit >= 3.1.2, < 4",
    "Jinja2 >= 3, < 4",
    "ActionMan == 0.0.0.dev24",
    "ControlMan == 0.0.0.dev424",
    "ConventionalCommits == 0.0.0.dev54",
    "GitHub-Contexts == 0.0.0.dev21",
    "LoggerMan == 0.0.0.dev82",
    "MDit == 0.0.0.dev52",
    "HTMP == 0.0.0.dev5",
    "PyLinks == 0.0.0.dev65",
    "PySyntax == 0.0.0.dev5",
    "VersionMan == 0.0.0.dev249",
    "GitTidy == 0.0.0.dev80",
    "PkgData == 0.0.0.dev5",
    "PyShellMan == 0.0.0.dev42",
    "PySerials == 0.0.0.dev55",
    "FileEx == 0.0.0.dev1",
    "ANSI-SGR == 0.0.0.dev10",
    "PyColorIT == 0.0.0.dev8",
]
requires-python = ">=3.10"


#[project.scripts]
#rd-print = "repodynamics.actions._print:main"
#repodynamics-get-metadata = "pypackit.metadata:__main__"
#repodynamics-sync-files = "pypackit.templates:__main__"
#repodynamics-deploy = "pypackit.cd:__main__"